full project revamp + test of navitia API + division of dash script into components

--- a/data_extraction/.env
+++ b/data_extraction/.env
@@ -1,3 +1,4 @@
 # Add your Visual Crossing API key here
 VISUAL_CROSSING_API_KEY='BHVRFX9893TEQ47X3PJU85L3Y'
 TOMTOM_API_KEY='HqfYzA2MsXY66FWxaAGpLkAKHtoIA0AO'
+NAVITIA_API_KEY=''
